--- a/phpGedView/themes/simplygreen/style.css
+++ b/phpGedView/themes/simplygreen/style.css
@@ -1229,15 +1229,17 @@ a.showit:hover span {
 	z-index: 1;
 }
 .iwstyle {
-	     background-image: url("images/greengradiant.gif");
-	     padding:10px;
-	     width:360px; /*this is from the original googlemap.php file so should be left in */
-	     /*background-color: #FFFFFF;*/
+	color: white;
+	background-image: url("images/greengradiant.gif");
+	padding:10px;
+	width:360px; /*this is from the original googlemap.php file so should be left in */
+	/*background-color: #FFFFFF;*/
 }
 .iwstyle a {
 } 
 .iwstyle a:hover {
 }
+
 /* Tag Cloud styles*/
 .tag_cloud_table {
 	width:70%;
